--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
+version: 1
 services:
   - type: web
-    name: chatbot
+    name: my-rasa-service
     env: python
+    plan: starter
     buildCommand: pip install -r requirements.txt && rasa train
     startCommand: rasa run --enable-api --cors "*"
-    # Optional: Specify the Python version
     env:
-      PYTHON_VERSION: 3.7.9  # Set this to your desired Python version
+      PYTHON_VERSION: "3.7.9"  # Ensure this is a string
